--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -45,3 +45,18 @@ button{
   border-radius: 7px;
   box-shadow: 2px 2px 12px rgba(0,0,0,0.4);
 }
+@media screen and (max-width:500px) {
+  .card{
+padding-bottom: 50px;
+
+  grid-template-columns: repeat(1,1fr);
+}
+.card{
+  min-width:330px ;
+  width: 87%;
+  margin: 0 auto;
+}
+.card  p{
+  line-break: anywhere;
+}
+}
