--- a/src/components/nav/Nav.css
+++ b/src/components/nav/Nav.css
@@ -7,3 +7,18 @@ nav{
   box-shadow: 0 3px 19px rgba(0,0,0,0.7);
   
 }
+@media screen and (max-width:500px) {
+nav{
+padding-bottom: 50px;
+
+  grid-template-columns: repeat(1,1fr);
+}
+nav{
+  min-width:330px ;
+  width: 87%;
+  margin: 0 auto;
+}
+nav p{
+  line-break: anywhere;
+}
+}
