--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,27 @@
     align-items: center;
     justify-content: center;
 }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px auto;
+  max-width: 900px;
+}
+tr:nth-of-type(odd) {
+  background: #eee;
+}
+th {
+  background: #333;
+  color: white;
+  font-weight: bold;
+}
+td,
+th {
+  padding: 7px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
+
+h2 {
+  text-align: center;
+}
