--- a/src/components/card/App.css
+++ b/src/components/card/App.css
@@ -1,58 +1,4 @@
-/* .card {
-  align-items: center;
-  gap: 20px;
-  padding: 10px;
-  box-shadow: 2px 3px 19px rgba(0, 0, 0, 0.4);
-  border-radius: 10px;
-  display: grid;
-  gap: 20px;
-  grid-template-columns: repeat(3, 1fr);
-  margin-top: 10px;
-  margin-left: 10%;
-  margin-right: 10%;
-  margin-bottom: 2%;
-} */
 
-/* table {
-  width: 90%;
-  background-color: rgb(244, 250, 250);
-  border-radius: 5px ;
-  box-shadow: 0 3px 8px rgba(0,0,0,0.5);
-
- 
-} */
-/* .tableForm{
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-/* margin: 10px 10px; */
-
-
-
-/* th {
-  height: 30px;
-}
-tr{
-  height:30px;
-  text-align: center;
-
-}
-th, td {
-
-  padding: 0px 49px;
-  text-align: left;
-}
-.headTable{
-  
-} */
-
-/* .card>div {
-  text-align: left;
-}
-
-.card p {
-  margin: 0 0 10px;
-} */
 .btnWrapper {
   display: flex;
   justify-content: center;
@@ -65,28 +11,10 @@ button {
   font-size: 1.5rem;
 }
 
-button:nth-child(2) {
+table button:nth-child(2) {
   color: rgb(193, 0, 0);
 }
 
-button:nth-child(1) {
+table button:nth-child(1) {
   color: rgb(0, 150, 40);
 }
-
-/* @media screen and (max-width:500px) {
-  .card {
-    padding-bottom: 50px;
-
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .card {
-    min-width: 330px;
-    width: 87%;
-    margin: 0 auto;
-  }
-
-  .card p {
-    line-break: anywhere;
-  }
-} */
